WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192336
Fix some unused parameter warnings
https://bugs.webkit.org/show_bug.cgi?id=192336
Summary
Fix some unused parameter warnings
Don Olmstead
Reported
2018-12-03 15:00:35 PST
Found these while building for PlayStation.
Attachments
Patch
(5.98 KB, patch)
2018-12-03 15:36 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(5.95 KB, patch)
2018-12-03 15:37 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(5.56 KB, patch)
2018-12-03 16:10 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-12-03 15:36:39 PST
Comment hidden (obsolete)
Created
attachment 356422
[details]
Patch
Don Olmstead
Comment 2
2018-12-03 15:37:41 PST
Created
attachment 356423
[details]
Patch
Michael Catanzaro
Comment 3
2018-12-03 15:57:42 PST
Comment on
attachment 356423
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356423&action=review
> Source/WTF/wtf/generic/MemoryPressureHandlerGeneric.cpp:34 > -void MemoryPressureHandler::platformReleaseMemory(Critical) > +void MemoryPressureHandler::platformReleaseMemory(Critical critical) > { > + UNUSED_PARAM(critical); > }
UNUSED_PARAM() exists for use with #ifdefs. Without #ifdefs, you can just not name the parameter. So I think you didn't need any changes in this hunk.
> Source/WTF/wtf/generic/MemoryPressureHandlerGeneric.cpp:47 > void MemoryPressureHandler::holdOff(Seconds seconds) > { > + UNUSED_PARAM(seconds); > }
Better to remove the parameter name: void MemoryPressureHandler::holdOff(Seconds)
> Source/WTF/wtf/generic/MemoryPressureHandlerGeneric.cpp:53 > void MemoryPressureHandler::respondToMemoryPressure(Critical critical, Synchronous synchronous) > { > + UNUSED_PARAM(critical); > + UNUSED_PARAM(synchronous); > }
Again, better to remove the parameter names.
> Source/WebCore/platform/network/curl/CertificateInfo.h:87 > template<> struct Coder<WebCore::CertificateInfo> { > static void encode(Encoder& encoder, const WebCore::CertificateInfo& certificateInfo) > { > + UNUSED_PARAM(encoder); > + UNUSED_PARAM(certificateInfo); > notImplemented(); > } > > static bool decode(Decoder& decoder, WebCore::CertificateInfo& certificateInfo) > { > + UNUSED_PARAM(decoder); > + UNUSED_PARAM(certificateInfo); > notImplemented(); > return false; > }
Again, best just remove the parameter names.
Don Olmstead
Comment 4
2018-12-03 16:10:14 PST
Created
attachment 356430
[details]
Patch Fixing review comments
WebKit Commit Bot
Comment 5
2018-12-03 18:30:35 PST
Comment on
attachment 356430
[details]
Patch Clearing flags on attachment: 356430 Committed
r238836
: <
https://trac.webkit.org/changeset/238836
>
WebKit Commit Bot
Comment 6
2018-12-03 18:30:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-12-03 18:31:30 PST
<
rdar://problem/46440021
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug