Fix some unused parameter warnings https://bugs.webkit.org/show_bug.cgi?id=192336

Reviewed by Fujii Hironori.

Source/WebCore:

* Modules/indexeddb/server/IDBSerialization.cpp:
(WebCore::isLegacySerializedIDBKeyData):
* platform/FileSystem.cpp:
(WebCore::FileSystem::openAndLockFile):
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::bindVertexArray):
* platform/network/curl/CertificateInfo.h:
(WTF::Persistence::Coder<WebCore::CertificateInfo>::encode):
(WTF::Persistence::Coder<WebCore::CertificateInfo>::decode):

Source/WTF:

* wtf/StackTrace.cpp:
(WTFGetBacktrace):
(WTF::StackTrace::demangle):
* wtf/generic/MemoryPressureHandlerGeneric.cpp:
(WTF::MemoryPressureHandler::holdOff):
(WTF::MemoryPressureHandler::respondToMemoryPressure):


Canonical link: https://commits.webkit.org/206977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238836 268f45cc-cd09-0410-ab3c-d52691b4dbfc